<resources>
    <string name="app_name">Meta Worship</string>
    <string name="menu_add_vocalist">Создать вокалиста</string>
    <!-- Strings used for fragments for navigation -->
    <string name="new_song_fragment_label">Новая песня</string>
    <string name="song_fragment_label">Песня</string>

    <!-- Add song fragment fields -->
    <string name="song_title">Название</string>
    <string name="song_lyrics">Слова</string>
    <string name="song_tonality">Тональность</string>
    <string name="capo">Каподастр</string>
    <string name="song_chords">Аккорды</string>
    <string name="song_tempo">Темп</string>
    <string name="submit">Сохранить</string>
    <string name="add_vocalist">Добавить вокалиста</string>
    <string name="add_solo">Добавить соло партию</string>
    <string name="add_modulation">Добавить модуляцию</string>
    <string name="modulation">Модуляция</string>
    <string name="vocalist">Вокалист</string>
    <string name="vocalists">Вокалисты</string>
    <string name="part">Партия</string>
    <string name="tonality">Тональность</string>
    <string name="remove_fields">Убрать поля</string>

    <!-- Song fragment -->
    <string name="chip_tonality">Тональность: %s</string>
    <string name="chords">Аккорды</string>
    <string name="lyrics">Слова</string>
    <string name="solo">Соло</string>
    <string name="show_menu">Показать меню</string>

    <!-- Drawer Layout -->
    <string name="navigation">Навигация</string>
    <string name="main">Главная</string>

    <!-- Search -->
    <string name="search_hint">Поиск песен</string>
    <string name="search_clear">Очистить поиск</string>
    <string name="new_vocalist">Новый вокалист</string>
    <string name="sync_songs">Обновить</string>

    <!-- Dialog -->
    <string name="delete_song_confirmation_title">Удалить песню?</string>
    <string name="delete_vocalist_confirmation_title">Удалить вокалиста?</string>
    <string name="delete_song_confirmation_message">Песня будет удалена со всех устройств.</string>
    <string name="delete_vocalist_confirmation_message">Вокалист будет удален со всех устройств.</string>

    <!-- Bottom sheet -->
    <string name="vocalist_saved">Вокалист добавлен</string>
    <string name="create_new_composition">Создать новый список</string>
    <string name="new_composition">Новый список</string>
    <string name="new_composition_hint">Список</string>
    <string name="change_tonality">Изменить тональность</string>

    <!-- SnackBar -->
    <string name="snackbar_dismiss">Закрыть</string>

    <!-- Accessibility (acs = accessibility) -->
    <string name="acs_new_song_fab">Перейти на экран для добавления новой песни</string>
    <string name="acs_add_remove_song_to_composition">Добавить или убрать песню из списка</string>

    <!-- Errors -->
    <string name="title_error">Пустое название</string>
    <string name="tonality_error">Не выбрана тональность</string>
    <string name="solo_part_error">Не выбран инструмент</string>
    <string name="solo_error">Пустая партия</string>
    <string name="chords_error">Нет аккордов</string>
    <string name="vocalist_error">Не выбран вокалист</string>

    <!-- Actions -->
    <string name="action_delete">Удалить</string>
    <string name="action_edit">Изменить</string>
    <string name="action_edit_tonality">Изменить тональность</string>
    <string name="action_cancel">Закрыть</string>
    <string name="action_copy">Скопировать песню</string>
    <string name="action_copy_chords">Скопировать аккорды</string>
    <string name="action_copy_in">Скопировать в тональности</string>
    <string name="action_copy_lyrics">Скопировать слова</string>
    <string name="action_add_to_composition">Добавить в список</string>

    <!-- Tonalities -->
    <string name="tonality_c">C</string>
    <string name="tonality_c_sharp">C#</string>
    <string name="tonality_d">D</string>
    <string name="tonality_e_flat">Eb</string>
    <string name="tonality_e">E</string>
    <string name="tonality_f">F</string>
    <string name="tonality_f_sharp">F#</string>
    <string name="tonality_g">G</string>
    <string name="tonality_a_flat">Ab</string>
    <string name="tonality_a">A</string>
    <string name="tonality_h_flat">Hb</string>
    <string name="tonality_h">H</string>

    <!-- Temp text -->
    <string name="card_title_temp">Я буду петь среди шторма и волн</string>
    <string name="card_tonality_temp">G</string>
    <string name="card_lyrics_temp">Пою я аллилуя всем что есть внутри меня, пою я аллилуя и прочь уйдут сомнения, пою я аллилуя</string>
    <string name="card_vocalists_temp">Саша: G, Рустам: C, Кети: A, Марина: D</string>
    <string name="card_vocalist_icon_temp">А</string>
    <string name="card_vocalist_song_count_temp">100</string>
    <string name="card_composition_name_temp">Test composition</string>
</resources>