<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="uz.suxa.metaworship.presentation.fragment.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_NewSongFragment"
            app:destination="@id/NewSongFragment"
            app:popUpTo="@id/HomeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_HomeFragment_to_SongFragment"
            app:destination="@id/SongFragment"
            app:popUpTo="@id/HomeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_HomeFragment_to_VocalistsFragment"
            app:destination="@id/VocalistsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/NewSongFragment"
        android:name="uz.suxa.metaworship.presentation.fragment.NewSongFragment"
        android:label="@string/new_song_fragment_label"
        tools:layout="@layout/fragment_new_song">
        <argument
            android:name="songId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/SongFragment"
        android:name="uz.suxa.metaworship.presentation.fragment.SongFragment"
        android:label="@string/song_fragment_label"
        tools:layout="@layout/fragment_song">
        <argument
            android:name="songId"
            app:argType="string" />
        <action
            android:id="@+id/action_SongFragment_to_NewSongFragment"
            app:destination="@id/NewSongFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/VocalistsFragment"
        android:name="uz.suxa.metaworship.presentation.fragment.VocalistsFragment"
        android:label="@string/vocalists" >
        <action
            android:id="@+id/action_VocalistsFragment_to_HomeFragment"
            app:destination="@id/HomeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
</navigation>